feat: implement pwd builtin